[workspace]
resolver = "2"
members = ["notion-tools"]

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["akitenkrad"]
description = "Notion API tools"
repository = "https://github.com/akitenkrad/rs-notion-tools.git"
license = "MIT/Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.95"

[workspace.metadata.release]
tag-prefix = ""
